# graphify-xiaoyibao

./: .gitignore  AGENTS.md  README.en.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.learnings/: ERRORS.md  LEARNINGS.md
docs/archive/: 2026-04-16-xiaoyibao-v1-design.pre-graphify-migration.md  2026-04-16-xiaoyibao-v1-plan.pre-graphify-migration.md
docs/archive/legacy-project-shape/core-py/: pyproject.toml
docs/archive/legacy-project-shape/core-py/src/xyb_core/: __init__.py  cache.py  cli.py  update.py  watch.py
docs/archive/legacy-project-shape/core-py/src/xyb_core/report/: __init__.py  render.py
docs/archive/legacy-project-shape/core-py/src/xyb_core/semantic/: __init__.py  merge.py
docs/archive/legacy-project-shape/core-py/tests/: test_report_render.py  test_semantic_backfill.py  test_watch.py
scripts/: host_mm_extract.sh
skills/xyb-tumor-markers-trend/: SKILL.md  (+1 more)
tests/: test_build.py  test_cache.py  test_cli_commands.py  test_cli_smoke.py  test_detect.py  test_detect_recursive.py  test_extract.py  test_facts_extractor.py  test_hooks.py  test_image_medical_extract.py  test_ingest.py  test_init.py  test_install.py  test_markers_trend.py  test_mineru_structured_text.py  test_normalized_markers.py  test_ocr.py  test_pipeline.py  test_report.py  test_semantic_backfill.py  test_serve.py  test_validation.py  test_watch.py
xyb/: __main__.py  analyze.py  build.py  cache.py  detect.py  dicom.py  export.py  extract.py  facts_extractor.py  hooks.py  ingest.py  init.py  install.py  markers_trend.py  mineru_batch.py  normalized.py  ocr.py  process.py  report.py  security.py  semantic_backfill.py  serve.py  validate.py  validation.py  watch.py  wiki.py
(+15 files in other folders)
