[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xyb-core"
version = "0.1.0"
description = "xiaoyibao core runtime"
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "typer>=0.12",
]

[project.scripts]
xyb-py = "xyb_core.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["xyb_core*"]
